--- a/src/posts/projects/project-02-soa.mdx
+++ b/src/posts/projects/project-02-soa.mdx
@@ -4,7 +4,7 @@ link: /projects/soa/
 category: "projects"
 title: Для А.Путина
 publicData: Oct 2023
-pagesCount: 1
+pagesCount: 5
 siteLink: https://preview.webflow.com/preview/soabridge?preview=0d5e075160042af87f3bc3988c01e1c4&workflow=sitePreview
 pages:
   - page:
@@ -13,12 +13,20 @@ pages:
       - layout: ../../assets/images/projects/project-02-soa/layout/0.png
   - page:
       - image: ../../assets/images/projects/project-02-soa/1.png
-      - title: Главная
+      - title: Про академию
       - layout: ../../assets/images/projects/project-02-soa/layout/1.png
   - page:
       - image: ../../assets/images/projects/project-02-soa/2.png
-      - title: Главная
+      - title: Вебинар
       - layout: ../../assets/images/projects/project-02-soa/layout/2.png
+  - page:
+      - image: ../../assets/images/projects/project-02-soa/0.png
+      - title: Контакты
+      - layout: ../../assets/images/projects/project-02-soa/layout/0.png
+  - page:
+      - image: ../../assets/images/projects/project-02-soa/0.png
+      - title: Дневник
+      - layout: ../../assets/images/projects/project-02-soa/layout/0.png
 
 sortIdx: 3
 ---
