Добавил технологии и фиксы для seo

--- a/src/posts/projects/project-01-yoga.mdx
+++ b/src/posts/projects/project-01-yoga.mdx
@@ -3,14 +3,18 @@ slug: namasteysha
 link: /projects/namasteysha/
 category: "projects"
 title: Namasteysha Yoga Home
+description: 100 балльный репетитор
 publicData: Oct 2025
 pagesCount: 1
 siteLink: https://i.gromov.digital/
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-01-namasteysha/0.png
       - title: Главная
       - layout: ../../assets/images/projects/project-01-namasteysha/layout/0.png
 
-sortIdx: 2
+sortIdx: 0
 ---
