--- a/src/posts/projects/project-02-soa.mdx
+++ b/src/posts/projects/project-02-soa.mdx
@@ -3,9 +3,13 @@ slug: soa
 link: /projects/soa/
 category: "projects"
 title: Для А.Путина
+description: 100 балльный репетитор
 publicData: Oct 2023
 pagesCount: 5
 siteLink: https://preview.webflow.com/preview/soabridge?preview=0d5e075160042af87f3bc3988c01e1c4&workflow=sitePreview
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-02-soa/0.png
@@ -28,5 +32,5 @@ pages:
       - title: Дневник
       - layout: ../../assets/images/projects/project-02-soa/layout/0.png
 
-sortIdx: 3
+sortIdx: 30
 ---
