--- a/src/posts/projects/project-03-topseller.mdx
+++ b/src/posts/projects/project-03-topseller.mdx
@@ -3,9 +3,13 @@ slug: topseller
 link: /projects/topseller/
 category: "projects"
 title: Topseller
+description: 100 балльный репетитор
 publicData: Oct 2025
 pagesCount: 5
 siteLink: https://demo.gromov.digital/topseller/
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-03-topseller/0.png
@@ -36,5 +40,5 @@ pages:
       - title: tariffs
       - layout: ../../assets/images/projects/project-03-topseller/layout/6.png
 
-sortIdx: 4
+sortIdx: 40
 ---
