--- a/src/posts/projects/project-04-domznaniy.mdx
+++ b/src/posts/projects/project-04-domznaniy.mdx
@@ -3,14 +3,18 @@ slug: domznaniy
 link: /projects/domznaniy/
 category: "projects"
 title: Дом знаний
+description: 100 балльный репетитор
 publicData: Oct 2025
 pagesCount: 1
 siteLink: https://demo.gromov.digital/domznaniy/
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-04-home-ed/0.png
       - title: Главная
       - layout: ../../assets/images/projects/project-04-home-ed/layout/0.png
 
-sortIdx: 5
+sortIdx: 50
 ---
