--- a/src/posts/projects/project-09-openfactoring.mdx
+++ b/src/posts/projects/project-09-openfactoring.mdx
@@ -3,9 +3,13 @@ slug: openfactoring
 link: /projects/openfactoring/
 category: "projects"
 title: Факторинг Открытие
+description: 100 балльный репетитор
 publicData: Sep 11th 2021
 pagesCount: 22
 siteLink: https://demo.gromov.digital/factoring/sitemap/sitemap.html
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - title: Главная
@@ -117,5 +121,5 @@ pages:
       - image: ../../assets/images/projects/project-0-openfactoring/5.png
       - layout: ../../assets/images/projects/project-0-openfactoring/layout/5.jpg
 
-sortIdx: 10
+sortIdx: 100
 ---
