--- a/src/posts/projects/project-10-rschip.mdx
+++ b/src/posts/projects/project-10-rschip.mdx
@@ -3,9 +3,13 @@ slug: rschip
 link: /projects/rschip/
 category: "projects"
 title: Rschip
+description: 100 балльный репетитор
 publicData: Nov 2022
 pagesCount: 9
 siteLink: https://demo.gromov.digital/rschip/
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-10-rschip/0.png
@@ -43,5 +47,5 @@ pages:
       - image: ../../assets/images/projects/project-10-rschip/8.png
       - title: Страница Контакты
       - layout: ../../assets/images/projects/project-10-rschip/layout/8.png
-sortIdx: 11
+sortIdx: 110
 ---
