--- a/src/posts/projects/project-110-hristina-cosmetics.mdx
+++ b/src/posts/projects/project-110-hristina-cosmetics.mdx
@@ -3,9 +3,13 @@ slug: h-cosmetics
 link: /projects/h-cosmetics/
 category: "projects"
 title: Hristina-Cosmetics
+description: 100 балльный репетитор
 publicData: Aug 2021
 pagesCount: 10
 siteLink: https://demo.gromov.digital/h-cosmetics/
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-110-hristina-cosmetics/0.png
@@ -47,5 +51,5 @@ pages:
       - image: ../../assets/images/projects/project-110-hristina-cosmetics/9.png
       - title: Уход-за-лицом
       - layout: ../../assets/images/projects/project-110-hristina-cosmetics/layout/9.png
-sortIdx: 110
+sortIdx: 1100
 ---
