--- a/src/posts/projects/project-120-mark-landing-project.mdx
+++ b/src/posts/projects/project-120-mark-landing-project.mdx
@@ -3,13 +3,17 @@ slug: mark
 link: /projects/mark/
 category: "projects"
 title: Mark-Landing
+description: 100 балльный репетитор
 publicData: Feb 2021
 pagesCount: 1
 siteLink: https://demo.gromov.digital/mark/
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-120-mark-landing-project/0.png
       - title: Главная
       - layout: ../../assets/images/projects/project-120-mark-landing-project/layout/0.png
-sortIdx: 120
+sortIdx: 1200
 ---
