--- a/src/posts/projects/project-131-interstitial.mdx
+++ b/src/posts/projects/project-131-interstitial.mdx
@@ -3,13 +3,17 @@ slug: rogersserviinterstitialces
 link: /projects/interstitial/
 category: "projects"
 title: Interstitial
+description: 100 балльный репетитор
 publicData: Feb 2021
 pagesCount: 1
 siteLink: https://demo.gromov.digital/interstitial/
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-130-rogersservices/0.png
       - title: Главная
       - layout: ../../assets/images/projects/project-130-rogersservices/layout/0.png
-sortIdx: 131
+sortIdx: 1310
 ---
