--- a/src/posts/projects/project-140-wellbeing.mdx
+++ b/src/posts/projects/project-140-wellbeing.mdx
@@ -3,9 +3,13 @@ slug: wellbeing
 link: /projects/wellbeing/
 category: "projects"
 title: Wellbeing
+description: 100 балльный репетитор
 publicData: Mart 2021
 pagesCount: 8
 siteLink: https://demo.gromov.digital/wellbeing-ru/
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-140-wellbeing/0.png
@@ -39,5 +43,5 @@ pages:
       - image: ../../assets/images/projects/project-140-wellbeing/7.png
       - title: Питание
       - layout: ../../assets/images/projects/project-140-wellbeing/layout/7.png
-sortIdx: 140
+sortIdx: 1400
 ---
