--- a/src/posts/projects/project-150-ityu.mdx
+++ b/src/posts/projects/project-150-ityu.mdx
@@ -3,13 +3,17 @@ slug: ityu
 link: /projects/ityu/
 category: "projects"
 title: ITYU
+description: 100 балльный репетитор
 publicData: Jul 2022
 pagesCount: 1
 siteLink: https://www.behance.net/gallery/161661629/ITYU-Project
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-150-ityu/0.png
       - title: ITYU
       - layout: ../../assets/images/projects/project-150-ityu/layout/0.png
-sortIdx: 150
+sortIdx: 1500
 ---
