--- a/src/posts/projects/project-180-tachos.mdx
+++ b/src/posts/projects/project-180-tachos.mdx
@@ -3,9 +3,13 @@ slug: tachos
 link: /projects/tachos/
 category: "projects"
 title: Tachos
+description: 100 балльный репетитор
 publicData: Sep 2022
 pagesCount: 4
 siteLink: https://www.behance.net/gallery/161893031/Tachos-Project
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-180-tachos/0.png
@@ -27,5 +31,5 @@ pages:
       - image: ../../assets/images/projects/project-180-tachos/4.png
       - title: Инфо
       - layout: ../../assets/images/projects/project-180-tachos/layout/4.png
-sortIdx: 180
+sortIdx: 1800
 ---
