--- a/src/posts/projects/project-190-dr-krisin.mdx
+++ b/src/posts/projects/project-190-dr-krisin.mdx
@@ -3,9 +3,13 @@ slug: krysin
 link: /projects/krysin/
 category: "projects"
 title: DR-Krisin
+description: 100 балльный репетитор
 publicData: Sep 2021
 pagesCount: 5
 siteLink: https://www.behance.net/gallery/161661005/DR-Krisin-Project
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-190-krysin/0.png
@@ -27,5 +31,5 @@ pages:
       - image: ../../assets/images/projects/project-190-krysin/4.png
       - title: Статьи
       - layout: ../../assets/images/projects/project-190-krysin/layout/4.png
-sortIdx: 190
+sortIdx: 1900
 ---
