--- a/src/posts/projects/project-20-montetuning.mdx
+++ b/src/posts/projects/project-20-montetuning.mdx
@@ -3,9 +3,13 @@ slug: montetuning
 link: /projects/montetuning/
 category: "projects"
 title: Montetuning
+description: 100 балльный репетитор
 publicData: Sep 2021
 pagesCount: 14
 siteLink: https://demo.gromov.digital/monte
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-20-montetuning/0.png
@@ -63,5 +67,5 @@ pages:
       - image: ../../assets/images/projects/project-20-montetuning/0.png
       - title: seo шаблоны
       - layout: ../../assets/images/projects/project-20-montetuning/layout/0.png
-sortIdx: 20
+sortIdx: 200
 ---
