--- a/src/posts/projects/project-200-krutakov.mdx
+++ b/src/posts/projects/project-200-krutakov.mdx
@@ -3,9 +3,13 @@ slug: krutakov
 link: /projects/krutakov/
 category: "projects"
 title: Krutakov
+description: 100 балльный репетитор
 publicData: Sep 2021
 pagesCount: 6
 siteLink: https://demo.gromov.digital/krutakov/
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-200-krutakov/0.png
@@ -31,5 +35,5 @@ pages:
       - image: ../../assets/images/projects/project-200-krutakov/5.png
       - title: Контакт
       - layout: ../../assets/images/projects/project-200-krutakov/layout/5.png
-sortIdx: 200
+sortIdx: 2000
 ---
