--- a/src/posts/projects/project-210-autoshum.mdx
+++ b/src/posts/projects/project-210-autoshum.mdx
@@ -3,13 +3,17 @@ slug: autoshum
 link: /projects/autoshum/
 category: "projects"
 title: Автошум
+description: 100 балльный репетитор
 publicData: May 2021
 pagesCount: 1
 siteLink: https://www.behance.net/gallery/161603779/avtoshum-project
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-210-autoshum/0.png
       - title: Главная
       - layout: ../../assets/images/projects/project-210-autoshum/layout/0.png
-sortIdx: 210
+sortIdx: 2100
 ---
