--- a/src/posts/projects/project-220-gradi.mdx
+++ b/src/posts/projects/project-220-gradi.mdx
@@ -3,13 +3,17 @@ slug: gardi
 link: /projects/gardi/
 category: "projects"
 title: Gradi
+description: 100 балльный репетитор
 publicData: Feb 2021
 pagesCount: 1
 siteLink: https://www.behance.net/gallery/161602003/Gardi-Project
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-220-gardi/0.png
       - title: Gardi
       - layout: ../../assets/images/projects/project-220-gardi/layout/0.png
-sortIdx: 220
+sortIdx: 2200
 ---
