--- a/src/posts/projects/project-230-wedding.mdx
+++ b/src/posts/projects/project-230-wedding.mdx
@@ -3,13 +3,17 @@ slug: wedding
 link: /projects/wedding/
 category: "projects"
 title: Wedding
+description: 100 балльный репетитор
 publicData: Sep 2020
 pagesCount: 1
 siteLink: https://demo.gromov.digital/wedding/
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-230-wedding/0.png
       - title: Wedding
       - layout: ../../assets/images/projects/project-230-wedding/layout/0.png
-sortIdx: 230
+sortIdx: 2300
 ---
