--- a/src/posts/projects/project-240-yoga.mdx
+++ b/src/posts/projects/project-240-yoga.mdx
@@ -3,13 +3,17 @@ slug: yoga
 link: /projects/yoga/
 category: "projects"
 title: Yoga
+description: 100 балльный репетитор
 publicData: Sep 2020
 pagesCount: 1
 siteLink: https://demo.gromov.digital/yoga-ca/
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-240-yoga/0.png
       - title: Yoga
       - layout: ../../assets/images/projects/project-240-yoga/layout/0.jpg
-sortIdx: 240
+sortIdx: 2400
 ---
