--- a/src/posts/projects/project-260-multi.mdx
+++ b/src/posts/projects/project-260-multi.mdx
@@ -3,13 +3,17 @@ slug: multi
 link: /projects/multi/
 category: "projects"
 title: Multi
+description: 100 балльный репетитор
 publicData: Sep 2020
 pagesCount: 1
 siteLink: https://demo.gromov.digital/multipurpose/
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-260-multi/0.png
       - title: Главная
       - layout: ../../assets/images/projects/project-260-multi/layout/0.jpg
-sortIdx: 260
+sortIdx: 2600
 ---
