--- a/src/posts/projects/project-270-ebook.mdx
+++ b/src/posts/projects/project-270-ebook.mdx
@@ -3,13 +3,17 @@ slug: ebook
 link: /projects/ebook/
 category: "projects"
 title: Ebook
+description: 100 балльный репетитор
 publicData: Sep 2020
 pagesCount: 1
 siteLink: https://demo.gromov.digital/ebook/
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-270-ebook/0.png
       - title: Главная
       - layout: ../../assets/images/projects/project-270-ebook/layout/0.jpg
-sortIdx: 270
+sortIdx: 2700
 ---
