--- a/src/posts/projects/project-280-hospital.mdx
+++ b/src/posts/projects/project-280-hospital.mdx
@@ -3,13 +3,17 @@ slug: hospital
 link: /projects/ebook/
 category: "projects"
 title: hospital
+description: 100 балльный репетитор
 publicData: Sep 2020
 pagesCount: 1
 siteLink: https://demo.gromov.digital/hospital/
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-280-hospital/0.png
       - title: Главная
       - layout: ../../assets/images/projects/project-280-hospital/layout/0.jpg
-sortIdx: 280
+sortIdx: 2800
 ---
