--- a/src/posts/projects/project-290-educational.mdx
+++ b/src/posts/projects/project-290-educational.mdx
@@ -3,14 +3,18 @@ slug: educational
 link: /projects/educational/
 category: "projects"
 title: Edication
+description: 100 балльный репетитор
 publicData: Sep 2020
 pagesCount: 2
 siteLink: https://demo.gromov.digital/educational/
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-290-educational/0.png
       - title: Главная
       - layout: ../../assets/images/projects/project-290-educational/layout/0.jpg
 
-sortIdx: 290
+sortIdx: 2900
 ---
