--- a/src/posts/projects/project-30-temnay-faza.mdx
+++ b/src/posts/projects/project-30-temnay-faza.mdx
@@ -3,9 +3,13 @@ slug: tfaza
 link: /projects/tfaza/
 category: "projects"
 title: Темная Фаза
+description: 100 балльный репетитор
 publicData: Apr 2021
 pagesCount: 11
 siteLink: https://demo.gromov.digital/tfaza/
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-30-temnay-faza/0.png
@@ -51,5 +55,5 @@ pages:
       - image: ../../assets/images/projects/project-30-temnay-faza/10.png
       - title: Оформление 3
       - layout: ../../assets/images/projects/project-30-temnay-faza/layout/10.png
-sortIdx: 30
+sortIdx: 300
 ---
