--- a/src/posts/projects/project-300-event.mdx
+++ b/src/posts/projects/project-300-event.mdx
@@ -3,13 +3,17 @@ slug: event
 link: /projects/event/
 category: "projects"
 title: Event
+description: 100 балльный репетитор
 publicData: Sep 2020
 pagesCount: 1
 siteLink: https://demo.gromov.digital/event/
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-300-event/0.png
       - title: Главная
       - layout: ../../assets/images/projects/project-300-event/layout/0.jpg
-sortIdx: 300
+sortIdx: 3000
 ---
