--- a/src/posts/projects/project-310-estate.mdx
+++ b/src/posts/projects/project-310-estate.mdx
@@ -3,13 +3,17 @@ slug: estate
 link: /projects/estate/
 category: "projects"
 title: Estate
+description: 100 балльный репетитор
 publicData: Sep 2020
 pagesCount: 1
 siteLink: https://demo.gromov.digital/estate/
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-310-estate/0.png
       - title: Главная
       - layout: ../../assets/images/projects/project-310-estate/layout/0.jpg
-sortIdx: 310
+sortIdx: 3100
 ---
