--- a/src/posts/projects/project-350-the-optical-shop.mdx
+++ b/src/posts/projects/project-350-the-optical-shop.mdx
@@ -3,9 +3,13 @@ slug: the-optical-shop
 link: /projects/the-optical-shop/
 category: "projects"
 title: The-optical-shop
+description: 100 балльный репетитор
 publicData: Sep 2018
 pagesCount: 8
 siteLink: https://www.behance.net/gallery/94513881/Theopticalshop
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-350-the-optical-shop/0.png
@@ -39,5 +43,5 @@ pages:
       - image: ../../assets/images/projects/project-350-the-optical-shop/7.png
       - title: Солнечные Очки
       - layout: ../../assets/images/projects/project-350-the-optical-shop/layout/7.png
-sortIdx: 350
+sortIdx: 3500
 ---
