--- a/src/posts/projects/project-360-akvahit.mdx
+++ b/src/posts/projects/project-360-akvahit.mdx
@@ -3,9 +3,13 @@ slug: akvahit
 link: /projects/akvahit/
 category: "projects"
 title: Akvahit
+description: 100 балльный репетитор
 publicData: May 2017
 pagesCount: 12
 siteLink: https://www.behance.net/gallery/82263873/verstka-glavnoj-stranicy-sajta-akvahit-redizajn
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-360-akvahit/0.png
@@ -55,5 +59,5 @@ pages:
       - image: ../../assets/images/projects/project-360-akvahit/11.png
       - title: Детали
       - layout: ../../assets/images/projects/project-360-akvahit/layout/11.png
-sortIdx: 360
+sortIdx: 3600
 ---
