--- a/src/posts/projects/project-370-vr-jazz.mdx
+++ b/src/posts/projects/project-370-vr-jazz.mdx
@@ -3,9 +3,13 @@ slug: vr-jazz
 link: /projects/vr-jazz/
 category: "projects"
 title: Vr-jazz
+description: 100 балльный репетитор
 publicData: Sep 2018
 pagesCount: 8
 siteLink: https://www.behance.net/gallery/69706817/razrabotkaveb-dizajnverstkaintegracijavsego-sajta-VR
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-370-vr-jazz/0.png
@@ -39,5 +43,5 @@ pages:
       - image: ../../assets/images/projects/project-370-vr-jazz/7.png
       - title: Звёзды
       - layout: ../../assets/images/projects/project-370-vr-jazz/layout/7.png
-sortIdx: 370
+sortIdx: 3700
 ---
