--- a/src/posts/projects/project-40-admiral-club.mdx
+++ b/src/posts/projects/project-40-admiral-club.mdx
@@ -3,9 +3,13 @@ slug: admiral-club
 link: /projects/admiral-club/
 category: "projects"
 title: Admiral Club
+description: 100 балльный репетитор
 publicData: Sep 2022
 pagesCount: 13
 siteLink: https://demo.gromov.digital/admiral/
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-40-admiral-club/0.png
@@ -67,5 +71,5 @@ pages:
       - image: ../../assets/images/projects/project-40-admiral-club/14.png
       - title: Главная
       - layout: ../../assets/images/projects/project-40-admiral-club/layout/14.png
-sortIdx: 40
+sortIdx: 400
 ---
