--- a/src/posts/projects/project-450-webclim.mdx
+++ b/src/posts/projects/project-450-webclim.mdx
@@ -3,9 +3,13 @@ slug: webclim
 link: /projects/webclim/
 category: "projects"
 title: Webclim
+description: 100 балльный репетитор
 publicData: Sep 2017
 pagesCount: 2
 siteLink: https://www.behance.net/gallery/95769551/webclim
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-450-webclim/0.png
@@ -15,5 +19,5 @@ pages:
       - image: ../../assets/images/projects/project-450-webclim/0.png
       - title: Каталог
       - layout: ../../assets/images/projects/project-450-webclim/layout/1.png
-sortIdx: 450
+sortIdx: 4500
 ---
