--- a/src/posts/projects/project-460-bookkeeping.mdx
+++ b/src/posts/projects/project-460-bookkeeping.mdx
@@ -3,9 +3,13 @@ slug: bookkeeping
 link: /projects/bookkeeping/
 category: "projects"
 title: Bookkeeping
+description: 100 балльный репетитор
 publicData: Aug 2019
 pagesCount: 8
 siteLink: https://i.gromov.digital/
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-460-bookkeeping/0.png
@@ -39,5 +43,5 @@ pages:
       - image: ../../assets/images/projects/project-460-bookkeeping/7.png
       - title: Группы
       - layout: ../../assets/images/projects/project-460-bookkeeping/layout/7.png
-sortIdx: 460
+sortIdx: 4600
 ---
