--- a/src/posts/projects/project-470-moc-ikt.mdx
+++ b/src/posts/projects/project-470-moc-ikt.mdx
@@ -3,9 +3,13 @@ slug: moc-ikt
 link: /projects/moc-ikt/
 category: "projects"
 title: ГКУ МОЦ ИКТ
+description: 100 балльный репетитор
 publicData: Jan 2019
 pagesCount: 1
 siteLink: https://i.gromov.digital/
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-470-moc-ikt/0.png
@@ -15,5 +19,5 @@ pages:
       - image: ../../assets/images/projects/project-470-moc-ikt/1.png
       - title: Первый класс
       - layout: ../../assets/images/projects/project-470-moc-ikt/layout/1.png
-sortIdx: 470
+sortIdx: 4700
 ---
