--- a/src/posts/projects/project-50-monte-ebay.mdx
+++ b/src/posts/projects/project-50-monte-ebay.mdx
@@ -3,9 +3,13 @@ slug: monte-ebay
 link: /projects/monte-ebay/
 category: "projects"
 title: Monte Ebay
+description: 100 балльный репетитор
 publicData: Jan 2022
 pagesCount: 2
 siteLink: https://demo.gromov.digital/monte-ebay/
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-50-monte-ebay/0.png
@@ -15,5 +19,5 @@ pages:
       - image: ../../assets/images/projects/project-50-monte-ebay/1.png
       - title: Инфо
       - layout: ../../assets/images/projects/project-50-monte-ebay/layout/1.png
-sortIdx: 50
+sortIdx: 500
 ---
