--- a/src/posts/projects/project-500-protector-shop.mdx
+++ b/src/posts/projects/project-500-protector-shop.mdx
@@ -3,13 +3,17 @@ slug: protector-shop
 link: /projects/protector-shop/
 category: "projects"
 title: Protector Shop
+description: 100 балльный репетитор
 publicData: Mart 2016
 pagesCount: 1
 siteLink: https://demo.gromov.digital/protector-shop/
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-500-protector-shop/0.png
       - title: Protector Shop
       - layout: ../../assets/images/projects/project-500-protector-shop/layout/0.png
-sortIdx: 500
+sortIdx: 5000
 ---
