--- a/src/posts/projects/project-70-acpgame.mdx
+++ b/src/posts/projects/project-70-acpgame.mdx
@@ -3,9 +3,13 @@ slug: acpgame
 link: /projects/acpgame/
 category: "projects"
 title: ACPGAME
+description: 100 балльный репетитор
 publicData: Dec 2020
 pagesCount: 10
 siteLink: https://demo.gromov.digital/acpgame/
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-70-acpgame/0.png
@@ -33,7 +37,7 @@ pages:
       - layout: ../../assets/images/projects/project-70-acpgame/layout/4.png
   - page:
       - image: ../../assets/images/projects/project-70-acpgame/6.png
-      - title: ФОТОАЛЬБОМЫ
+      - title: Фотоальбомы
       - layout: ../../assets/images/projects/project-70-acpgame/layout/6.png
   - page:
       - image: ../../assets/images/projects/project-70-acpgame/7.png
@@ -47,5 +51,5 @@ pages:
       - image: ../../assets/images/projects/project-70-acpgame/9.png
       - title: Видео
       - layout: ../../assets/images/projects/project-70-acpgame/layout/9.png
-sortIdx: 70
+sortIdx: 700
 ---
