--- a/src/posts/projects/project-80-panda.mdx
+++ b/src/posts/projects/project-80-panda.mdx
@@ -3,9 +3,13 @@ slug: panda
 link: /projects/panda/
 category: "projects"
 title: Panda
+description: 100 балльный репетитор
 publicData: Nov 2020
 pagesCount: 7
 siteLink: https://demo.gromov.digital/panda/
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-80-panda/0.png
@@ -35,5 +39,5 @@ pages:
       - image: ../../assets/images/projects/project-80-panda/6.png
       - title: Инфо2
       - layout: ../../assets/images/projects/project-80-panda/layout/6.png
-sortIdx: 80
+sortIdx: 800
 ---
