--- a/src/posts/projects/project-90-holybasil.mdx
+++ b/src/posts/projects/project-90-holybasil.mdx
@@ -3,9 +3,13 @@ slug: holybasil
 link: /projects/holybasil/
 category: "projects"
 title: Holybasil
+description: 100 балльный репетитор
 publicData: Jan 2021
 pagesCount: 3
 siteLink: https://demo.gromov.digital/holybasil/
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-90-holybasil/0.png
@@ -19,5 +23,5 @@ pages:
       - image: ../../assets/images/projects/project-90-holybasil/2.png
       - title: Политика
       - layout: ../../assets/images/projects/project-90-holybasil/layout/2.png
-sortIdx: 90
+sortIdx: 900
 ---
