--- a/src/posts/projects/project-01-tst.mdx
+++ b/src/posts/projects/project-01-tst.mdx
@@ -3,14 +3,19 @@ slug: tst
 link: /projects/tst/
 category: "projects"
 title: Проект Юлии Железняк
+description: 100 балльный репетитор
+task: Разработка сайта личный бренд под ключ
 publicData: Oct 2025
 pagesCount: 1
 siteLink: https://demo.gromov.digital/tst/
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-01-tst/0.png
       - title: Главная
       - layout: ../../assets/images/projects/project-01-tst/layout/0.png
 
-sortIdx: 2
+sortIdx: 1
 ---
