--- a/src/posts/projects/project-02-leily-yoga-ru.mdx
+++ b/src/posts/projects/project-02-leily-yoga-ru.mdx
@@ -3,13 +3,17 @@ slug: leily-yoga-ru
 link: /projects/leily-yoga-ru/
 category: "projects"
 title: Лейла Йога Ru
+description: 100 балльный репетитор
 publicData: Feb 2022
 pagesCount: 1
 siteLink: https://demo.gromov.digital/leily-yoga-ru/
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-60-leily-yoga-ru/0.png
       - title: Главная
       - layout: ../../assets/images/projects/project-60-leily-yoga-ru/layout/0.png
-sortIdx: 6
+sortIdx: 2
 ---
