--- a/src/posts/projects/project-100-pichshop.mdx
+++ b/src/posts/projects/project-100-pichshop.mdx
@@ -3,13 +3,17 @@ slug: pichshop
 link: /projects/pichshop/
 category: "projects"
 title: Pichshop
+description: 100 балльный репетитор
 publicData: Feb 2022
 pagesCount: 1
 siteLink: https://www.behance.net/gallery/161894123/Pichshop-project
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-100-pichshop/0.png
       - title: Pichshop
       - layout: ../../assets/images/projects/project-100-pichshop/layout/1.png
-sortIdx: 100
+sortIdx: 1000
 ---
