--- a/src/posts/projects/project-130-rogersservices.mdx
+++ b/src/posts/projects/project-130-rogersservices.mdx
@@ -3,13 +3,17 @@ slug: rogersservices
 link: /projects/rogersservices/
 category: "projects"
 title: Rogers-services
+description: 100 балльный репетитор
 publicData: Feb 2021
 pagesCount: 1
 siteLink: https://demo.gromov.digital/rogersservices/
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-130-rogersservices/0.png
       - title: Главная
       - layout: ../../assets/images/projects/project-130-rogersservices/layout/0.png
-sortIdx: 130
+sortIdx: 1300
 ---
