--- a/src/posts/projects/project-160-starmap.mdx
+++ b/src/posts/projects/project-160-starmap.mdx
@@ -3,13 +3,17 @@ slug: starmap
 link: /projects/starmap/
 category: "projects"
 title: StarMap
+description: 100 балльный репетитор
 publicData: Feb 2022
 pagesCount: 1
 siteLink: https://www.behance.net/gallery/161893031/Tachos-Project
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-160-starmap/0.png
       - title: StarMap
       - layout: ../../assets/images/projects/project-160-starmap/layout/0.png
-sortIdx: 160
+sortIdx: 1600
 ---
