--- a/src/posts/projects/project-250-fitness.mdx
+++ b/src/posts/projects/project-250-fitness.mdx
@@ -3,13 +3,17 @@ slug: fitness
 link: /projects/fitness/
 category: "projects"
 title: Fitness
+description: 100 балльный репетитор
 publicData: Sep 2020
 pagesCount: 1
 siteLink: https://demo.gromov.digital/fitness/
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-250-fitness/0.png
       - title: Главная
       - layout: ../../assets/images/projects/project-250-fitness/layout/0.jpg
-sortIdx: 250
+sortIdx: 2500
 ---
