--- a/src/posts/projects/project-320-medical.mdx
+++ b/src/posts/projects/project-320-medical.mdx
@@ -3,13 +3,17 @@ slug: medical
 link: /projects/medical/
 category: "projects"
 title: Medical
+description: 100 балльный репетитор
 publicData: Sep 2020
 pagesCount: 1
 siteLink: https://demo.gromov.digital/medical/
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-320-medical/0.png
       - title: Главная
       - layout: ../../assets/images/projects/project-320-medical/layout/0.jpg
-sortIdx: 320
+sortIdx: 3200
 ---
