--- a/src/posts/projects/project-330-decoreto.mdx
+++ b/src/posts/projects/project-330-decoreto.mdx
@@ -3,9 +3,13 @@ slug: decoreto
 link: /projects/decoreto/
 category: "projects"
 title: Decoreto
+description: 100 балльный репетитор
 publicData: Aug 2019
 pagesCount: 11
 siteLink: https://www.behance.net/gallery/94520401/Decoreto
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-330-decoreto/0.png
@@ -52,5 +56,5 @@ pages:
       - title: Продукты
       - layout: ../../assets/images/projects/project-330-decoreto/layout/11.png
 
-sortIdx: 330
+sortIdx: 3300
 ---
