--- a/src/posts/projects/project-340-ids.mdx
+++ b/src/posts/projects/project-340-ids.mdx
@@ -3,9 +3,13 @@ slug: ids
 link: /projects/ids/
 category: "projects"
 title: IdsMediad
+description: 100 балльный репетитор
 publicData: Sep 2018
 pagesCount: 14
 siteLink: https://www.behance.net/gallery/94520343/ids
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-340-ids/0.png
@@ -63,5 +67,5 @@ pages:
       - image: ../../assets/images/projects/project-340-ids/13.png
       - title: Рекламодателям
       - layout: ../../assets/images/projects/project-340-ids/layout/13.png
-sortIdx: 340
+sortIdx: 3400
 ---
