--- a/src/posts/projects/project-380-fininvest.mdx
+++ b/src/posts/projects/project-380-fininvest.mdx
@@ -3,13 +3,17 @@ slug: fininvest
 link: /projects/fininvest/
 category: "projects"
 title: fininvest
+description: 100 балльный репетитор
 publicData: Jan 2021
 pagesCount: 1
 siteLink: https://demo.gromov.digital/fininvest/
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-380-fininvest/0.png
       - title: Главная
       - layout: ../../assets/images/projects/project-380-fininvest/layout/0.png
-sortIdx: 380
+sortIdx: 3800
 ---
