--- a/src/posts/projects/project-390-confidence.mdx
+++ b/src/posts/projects/project-390-confidence.mdx
@@ -3,9 +3,13 @@ slug: confidence
 link: /projects/confidence/
 category: "projects"
 title: confidence
+description: 100 балльный репетитор
 publicData: Nov 2020
 pagesCount: 2
 siteLink: https://demo.gromov.digital/confidenceuicms/
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-390-confidence/0.png
@@ -15,5 +19,5 @@ pages:
       - image: ../../assets/images/projects/project-390-confidence/1.png
       - title: Логин
       - layout: ../../assets/images/projects/project-390-confidence/layout/1.jpg
-sortIdx: 390
+sortIdx: 3900
 ---
