--- a/src/posts/projects/project-400-euchet.mdx
+++ b/src/posts/projects/project-400-euchet.mdx
@@ -3,13 +3,17 @@ slug: euchet
 link: /projects/euchet/
 category: "projects"
 title: Euchet
+description: 100 балльный репетитор
 publicData: Sep 2017
 pagesCount: 1
 siteLink: https://www.behance.net/gallery/94523611/euchet
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-400-euchet/0.png
       - title: Главная
       - layout: ../../assets/images/projects/project-400-euchet/layout/0.png
-sortIdx: 400
+sortIdx: 4000
 ---
