--- a/src/posts/projects/project-410-danfoss.mdx
+++ b/src/posts/projects/project-410-danfoss.mdx
@@ -3,13 +3,17 @@ slug: danfoss
 link: /projects/danfoss/
 category: "projects"
 title: Danfoss
+description: 100 балльный репетитор
 publicData: Sep 2017
 pagesCount: 1
 siteLink: https://www.behance.net/gallery/82263817/verstka-lendinga-Danfoss-dlja-sajta-akvahit
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-410-danfoss/0.png
       - title: Главная
       - layout: ../../assets/images/projects/project-410-danfoss/layout/0.png
-sortIdx: 410
+sortIdx: 4100
 ---
