--- a/src/posts/projects/project-420-pulsar.mdx
+++ b/src/posts/projects/project-420-pulsar.mdx
@@ -3,13 +3,17 @@ slug: pulsar
 link: /projects/pulsar/
 category: "projects"
 title: Pulsar
+description: 100 балльный репетитор
 publicData: Sep 2017
 pagesCount: 1
 siteLink: https://www.behance.net/gallery/69706579/verstkaprototiplendinga-dlja-sajta-akavhit
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-420-pulsar/0.png
       - title: Главная
       - layout: ../../assets/images/projects/project-420-pulsar/layout/0.png
-sortIdx: 420
+sortIdx: 4200
 ---
