--- a/src/posts/projects/project-430-evakuator.mdx
+++ b/src/posts/projects/project-430-evakuator.mdx
@@ -3,13 +3,17 @@ slug: evakuator
 link: /projects/evakuator/
 category: "projects"
 title: Evakuator
+description: 100 балльный репетитор
 publicData: Sep 2017
 pagesCount: 1
 siteLink: https://www.behance.net/gallery/69706125/sozdanie-sajta-pod-kljuch-evakuatory24
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-430-evakuator/0.png
       - title: Главная
       - layout: ../../assets/images/projects/project-430-evakuator/layout/0.png
-sortIdx: 430
+sortIdx: 4300
 ---
