--- a/src/posts/projects/project-440-obed-ru.mdx
+++ b/src/posts/projects/project-440-obed-ru.mdx
@@ -3,13 +3,17 @@ slug: obed-ru
 link: /projects/obed-ru/
 category: "projects"
 title: Obed-ru
+description: 100 балльный репетитор
 publicData: Sep 2017
 pagesCount: 1
 siteLink: https://www.behance.net/gallery/69704945/verstka-stranicy-s-akciej-dlja-Obedru
+skills:
+  - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-440-obed-ru/0.png
       - title: Главная
       - layout: ../../assets/images/projects/project-440-obed-ru/layout/0.png
-sortIdx: 440
+sortIdx: 4400
 ---
