Добавил технологии в проекты

--- a/src/posts/projects/project-02-leily-yoga.mdx
+++ b/src/posts/projects/project-02-leily-yoga.mdx
@@ -8,8 +8,13 @@ publicData: Feb 2022
 pagesCount: 1
 siteLink: https://demo.gromov.digital/leily-yoga/
 skills:
+  - image: ../../assets/images/skills/html.svg
+  - image: ../../assets/images/skills/css3.svg
+  - image: ../../assets/images/skills/sass.svg
   - image: ../../assets/images/skills/javascript.svg
   - image: ../../assets/images/skills/typescript.svg
+  - image: ../../assets/images/skills/react.svg
+  - image: ../../assets/images/skills/gatsby.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-60-leily-yoga/0.png
