--- a/src/posts/projects/project-03-100p.mdx
+++ b/src/posts/projects/project-03-100p.mdx
@@ -9,8 +9,13 @@ publicData: Oct 2025
 pagesCount: 50
 siteLink: https://i.gromov.digital/
 skills:
+  - image: ../../assets/images/skills/html.svg
+  - image: ../../assets/images/skills/css3.svg
+  - image: ../../assets/images/skills/sass.svg
   - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/react.svg
   - image: ../../assets/images/skills/typescript.svg
+  - image: ../../assets/images/skills/nextjs.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-01-100p/0.png
