--- a/src/posts/projects/project-03-topseller.mdx
+++ b/src/posts/projects/project-03-topseller.mdx
@@ -8,8 +8,13 @@ publicData: Oct 2025
 pagesCount: 5
 siteLink: https://demo.gromov.digital/topseller/
 skills:
+  - image: ../../assets/images/skills/html.svg
+  - image: ../../assets/images/skills/css3.svg
+  - image: ../../assets/images/skills/sass.svg
   - image: ../../assets/images/skills/javascript.svg
   - image: ../../assets/images/skills/typescript.svg
+  - image: ../../assets/images/skills/react.svg
+  - image: ../../assets/images/skills/gatsby.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-03-topseller/0.png
