--- a/src/posts/projects/project-50-monte-ebay.mdx
+++ b/src/posts/projects/project-50-monte-ebay.mdx
@@ -8,6 +8,10 @@ publicData: Jan 2022
 pagesCount: 2
 siteLink: https://demo.gromov.digital/monte-ebay/
 skills:
+  - image: ../../assets/images/skills/html.svg
+  - image: ../../assets/images/skills/pug.svg
+  - image: ../../assets/images/skills/css3.svg
+  - image: ../../assets/images/skills/sass.svg
   - image: ../../assets/images/skills/javascript.svg
   - image: ../../assets/images/skills/typescript.svg
 pages:
