--- a/src/posts/projects/project-01-yoga.mdx
+++ b/src/posts/projects/project-01-yoga.mdx
@@ -8,8 +8,13 @@ publicData: Oct 2025
 pagesCount: 1
 siteLink: https://i.gromov.digital/
 skills:
+  - image: ../../assets/images/skills/html.svg
+  - image: ../../assets/images/skills/css3.svg
+  - image: ../../assets/images/skills/sass.svg
   - image: ../../assets/images/skills/javascript.svg
   - image: ../../assets/images/skills/typescript.svg
+  - image: ../../assets/images/skills/react.svg
+  - image: ../../assets/images/skills/gatsby.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-01-namasteysha/0.png
