--- a/src/posts/projects/project-09-openfactoring.mdx
+++ b/src/posts/projects/project-09-openfactoring.mdx
@@ -8,8 +8,15 @@ publicData: Sep 11th 2021
 pagesCount: 22
 siteLink: https://demo.gromov.digital/factoring/sitemap/sitemap.html
 skills:
+  - image: ../../assets/images/skills/html.svg
+  - image: ../../assets/images/skills/pug.svg
+  - image: ../../assets/images/skills/css3.svg
+  - image: ../../assets/images/skills/sass.svg
   - image: ../../assets/images/skills/javascript.svg
   - image: ../../assets/images/skills/typescript.svg
+  - image: ../../assets/images/skills/php.svg
+  - image: ../../assets/images/skills/wordpress.svg
+
 pages:
   - page:
       - title: Главная
