--- a/src/posts/projects/project-100-pichshop.mdx
+++ b/src/posts/projects/project-100-pichshop.mdx
@@ -8,7 +8,10 @@ publicData: Feb 2022
 pagesCount: 1
 siteLink: https://www.behance.net/gallery/161894123/Pichshop-project
 skills:
+  - image: ../../assets/images/skills/html.svg
+  - image: ../../assets/images/skills/css3.svg
   - image: ../../assets/images/skills/javascript.svg
+  - image: ../../assets/images/skills/vue.svg
   - image: ../../assets/images/skills/typescript.svg
 pages:
   - page:
