--- a/src/posts/projects/project-180-tachos.mdx
+++ b/src/posts/projects/project-180-tachos.mdx
@@ -8,8 +8,13 @@ publicData: Sep 2022
 pagesCount: 4
 siteLink: https://www.behance.net/gallery/161893031/Tachos-Project
 skills:
+  - image: ../../assets/images/skills/html.svg
+  - image: ../../assets/images/skills/css3.svg
+  - image: ../../assets/images/skills/sass.svg
   - image: ../../assets/images/skills/javascript.svg
   - image: ../../assets/images/skills/typescript.svg
+  - image: ../../assets/images/skills/react.svg
+  - image: ../../assets/images/skills/gatsby.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-180-tachos/0.png
