--- a/src/posts/projects/project-20-montetuning.mdx
+++ b/src/posts/projects/project-20-montetuning.mdx
@@ -8,8 +8,13 @@ publicData: Sep 2021
 pagesCount: 14
 siteLink: https://demo.gromov.digital/monte
 skills:
+  - image: ../../assets/images/skills/html.svg
+  - image: ../../assets/images/skills/css3.svg
+  - image: ../../assets/images/skills/sass.svg
   - image: ../../assets/images/skills/javascript.svg
   - image: ../../assets/images/skills/typescript.svg
+  - image: ../../assets/images/skills/react.svg
+  - image: ../../assets/images/skills/gatsby.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-20-montetuning/0.png
