--- a/src/posts/projects/project-40-admiral-club.mdx
+++ b/src/posts/projects/project-40-admiral-club.mdx
@@ -8,8 +8,14 @@ publicData: Sep 2022
 pagesCount: 13
 siteLink: https://demo.gromov.digital/admiral/
 skills:
+  - image: ../../assets/images/skills/html.svg
+  - image: ../../assets/images/skills/pug.svg
+  - image: ../../assets/images/skills/css3.svg
+  - image: ../../assets/images/skills/sass.svg
   - image: ../../assets/images/skills/javascript.svg
   - image: ../../assets/images/skills/typescript.svg
+  - image: ../../assets/images/skills/php.svg
+  - image: ../../assets/images/skills/wordpress.svg
 pages:
   - page:
       - image: ../../assets/images/projects/project-40-admiral-club/0.png
